syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

message SumRequest {  
  int32 a = 1;
  int32 b = 2;
}

message SumResponse { 
  int32 sum_result = 1; 
}

message PrimeNumberDecompositionRequest {
  int32 input_number = 1;
}

message PrimeNumberDecompositionResponse {
  int32 result = 1;
}

service CalculatorService { 
  rpc Sum(SumRequest) returns (SumResponse){}; 
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse){}; 
}